# harpia2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  f_compile_and_run.sh  harpia_launch.py  harpia_launch.xml  out.txt  package.xml  planning_controller_node.cpp  plansys_interface.cpp  process_output.py  run.sh
data/: map.json  mission.json  plan1.plan  plan2.plan
json/: missao.json
launch/: harpia_launch.py  patrol_example_launch.py
libs/RRT/: rrt.py
pddl/: domain.pddl  harpia_domain.pddl  harpia_domain_no_duractive_action.pddl  harpia_domain_test.pddl  harpia_problema_teste.pddl  harpia_problemsimple1.pddl  harpia_problemsimple2.pddl  harpia_problemsimple3.pddl  problem.pddl
scripts/: action_executor_base.py  action_node_example.py  action_planner.py  action_planner_executor.py  action_planner_memory.py  data_server.py  go_to.py  just_a_test.py  lifecycle_manager.py  lifecycle_manager_bkp.py  mission_controller.py  new_go_to.py  new_take_image.py  path_planner.py  problem_generator.py  route_executor.py  take_image.py
solver/OPTIC/: generate_plan.sh
solver/TFD/: generate_plan.sh  run_fail.sh
solver/TFD/downward/: plan.1  plan.2
solver/TFD/output/: all.groups  output  output.sas  variables.groups
src/: get_waypoints_node.cpp  go_to_action_node.cpp  move_action_node.cpp  move_action_node_old.cpp  planning_controller_node.cpp  planning_controller_node_old.cpp  plansys_interface.cpp  pulverize_region_action_node.cpp  recharge_battery_action_node.cpp  recharge_input_action_node.cpp  route_executor.cpp  take_image_action_node.cpp
src/fault_detection/: CMakeLists.txt  package.xml
src/fault_detection/anomaly_detection/src/: DroneInfoCompiler.cpp
src/fault_detection/weather_check/scripts/: test_client.py  weather_check_server.py
src/harpia_msgs/: CMakeLists.txt
src/harpia_msgs/action/: ActionCaller.action
src/harpia_msgs/srv/: GeneratePath.srv  GetMap.srv
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: GoalID.msg
src/launch/: harpia_launch.py
src/mission_fault_mitigation/: package.xml  setup.py
src/mission_fault_mitigation/mission_fault_mitigation/: mission_fault_mitigation_server.py
src/mission_goal_manager/: package.xml  setup.py
src/mission_goal_manager/mission_goal_manager/: mission_goal_manager_server.py  mission_goal_manager_server_temporal_planing.py
src/mission_planning/: CMakeLists.txt  package.xml  setup.py
src/mission_planning/mission_planning/: mission_planner_server.py  test_add_goal.py  test_client.py  test_client_copy.py
src/path_planning/: package.xml  setup.py
src/path_planning/path_planning/: path_planning_server.py
src/plansy2_interface_harpia/: CMakeLists.txt  package.xml
src/plansy2_interface_harpia/include/rosplan_interface_harpia/: RPHarpiaExecutor.hpp
src/plansy2_interface_harpia/src/: RPHarpiaExecutor.cpp
src/plansys2_interface_harpia/: CMakeLists.txt  package.xml
src/plansys2_interface_harpia/include/plansys2_interface_harpia/: RPHarpiaExecutor.hpp
src/plansys2_interface_harpia/include/rosplan_interface_harpia/: RPHarpiaExecutor.hpp
src/plansys2_interface_harpia/src/: RPHarpiaExecutor.cpp
src/rosplan_interface_harpia/src/: RPHarpiaExecutor.cpp
